<?xml version="1.0"?>
<package format="3">
  <name>task2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="afham@todo.todo">afham</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>opencv-python</depend>
  <depend>mediapipe</depend>
  <depend>numpy</depend>
  <depend>std_msgs</depend>  <!-- Missing in original -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

